# neurodrift-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: simulated_alignment_meaning_split.json  simulated_high_drift.json  simulated_low_drift.json  simulated_medium_drift.json
data/fixtures/: milimbeeg_s1.npz  nlb_mc_maze_small_20.npz
docs/: architecture.md  data-fixtures.md  eval-environments.md  evidence-protocol.md  experiments.md  memo.md  metrics.md  quality-gate.md  research-spec.md  roadmap.md  sprint-log.md  upstream-map.md  world2-alignment.md
examples/: compare_aligners.py  meaning_preservation_report.py  plasticity_signal_report.py  simulate_drift_report.py
notebooks/: README.md
scripts/: quality_gate.py
src/neurodrift/: __init__.py  benchmarks.py  cli.py  evidence.py  figures.py  intent.py  io.py  numerics.py  plasticity.py  session.py  simulation.py  stats.py
src/neurodrift/adapters/: __init__.py  inspect_ai.py  pyriemann.py
src/neurodrift/datasets/: __init__.py  milimbeeg.py  nlb.py
src/neurodrift/envs/: __init__.py  intent_drift.py
src/neurodrift/experiments/: __init__.py  meaning_preservation.py
src/neurodrift/metrics/: __init__.py  composite.py  decoder.py  riemannian.py  subspace.py  trajectory.py
tests/: test_benchmarks.py  test_cli.py  test_evidence.py  test_intent_plasticity.py  test_io.py  test_meaning_preservation.py  test_milimbeeg_loader.py  test_nlb_loader.py  test_riemannian_metrics.py  test_simulation_and_env.py  test_stats.py  test_subspace_and_alignment.py
(+3 files in other folders)
