[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodrift-lab"
version = "0.1.0"
description = "Metrics and evaluation environments for BCI intent drift and neuroplasticity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohammed Amjad" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
