[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodrift-lab"
version = "0.1.0"
description = "Metrics and evaluation environments for BCI intent drift and neuroplasticity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohammed Amjad" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
]
integrations = [
  "h5py>=3.10",
  "pyriemann>=0.6",
  "geomstats>=2.7",
]

